(almost) fixed images on top of interviste.php page, which were not aligning properly when col-xs-6 was in effect; forced row as table row and cols to display as table cells.

--- a/style.scss
+++ b/style.scss
@@ -308,6 +308,11 @@ img.verduci {
 		display: table-cell;
 		vertical-align: top;
 	}
+	.is-table-row [class*="col-xs-"] {
+		float: none;
+		display: table-cell;
+		vertical-align: top;
+	}
 }
 
 .navbar > .container-fluid {
